# cse-club-meeting-reminders

./: .funcignore  .gitignore  Cargo.toml  README.md  host.json
cse-meeting-reminder/: function.json
src/: constant.rs  constants.rs  discord.rs  main.rs  webex.rs
src/webex/: meeting.rs  meetings.rs
