[package]
name = "cse_meeting_reminders"
version = "0.1.0"
authors = ["Bryce Clark <bryce@bc56.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3