[package]
name = "cse_meeting_reminders"
version = "0.1.0"
authors = ["Bryce Clark <bryce@bc56.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }

[dev-dependencies]
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3