[package]
name = "cse_meeting_reminders"
version = "0.1.0"
authors = ["Bryce Clark <bryce@bc56.me>"]
edition = "2018"

[dependencies]
chrono = "0.4"
futures = "0.3"
async-std = { version = "1.8", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.16"
surf = "2.1"

[dev-dependencies]
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3